--- a/app/src/main/res/layout/intro.xml
+++ b/app/src/main/res/layout/intro.xml
@@ -7,11 +7,20 @@
                   android:orientation="vertical"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent">
-        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/crown"
+        <ImageView android:layout_width="450dp" android:layout_height="420dp" android:src="@drawable/crown"
+                   android:layout_marginBottom="20dp"
                    android:layout_gravity="center"/>
-        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/single" />
-        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/random"/>
+        <Button android:layout_width="270dp" android:layout_height="90dp"
+                android:id="@+id/single"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="25dp"
+                android:background="@drawable/single" />
+
+        <Button android:layout_width="270dp" android:layout_height="90dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="25dp"
+                android:background="@drawable/random"/>
     </LinearLayout>
-    <Button android:layout_width="64dp" android:layout_height="64dp" android:background="@drawable/option"
+    <Button android:layout_width="64dp" android:layout_height="64dp" android:background="@drawable/option" android:layout_margin="24dp"
             android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
 </RelativeLayout>
