--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -11,19 +11,10 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="sasa.pky.eyefight.Main">
 
-    <Button
-        android:id="@+id/startbtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
     <TextView
         android:id="@+id/countView"
+        android:layout_gravity="center"
+        android:textSize="24sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-    <LinearLayout
-        android:id="@+id/camera_view"
-        android:layout_width="match_parent"
-        android:layout_height="180dp">
-
-    </LinearLayout>
 </LinearLayout>
