--- a/app/src/main/res/layout/intro.xml
+++ b/app/src/main/res/layout/intro.xml
@@ -1,26 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                  android:orientation="vertical"
-                  android:layout_width="match_parent"
-                  android:layout_height="match_parent">
-        <ImageView android:layout_width="450dp" android:layout_height="420dp" android:src="@drawable/crown"
-                   android:layout_marginBottom="20dp"
-                   android:layout_gravity="center"/>
-        <Button android:layout_width="270dp" android:layout_height="90dp"
-                android:id="@+id/single"
-                android:layout_gravity="center_horizontal"
-                android:layout_margin="25dp"
-                android:background="@drawable/single" />
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:orientation="vertical"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent">
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                      android:orientation="vertical"
+                      android:layout_width="match_parent"
+                      android:layout_height="match_parent">
+            <ImageView android:layout_width="450dp" android:layout_height="420dp" android:src="@drawable/crown"
+                       android:layout_marginBottom="20dp"
+                       android:layout_gravity="center"/>
+            <Button android:layout_width="270dp" android:layout_height="90dp"
+                    android:id="@+id/single"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_margin="25dp"
+                    android:background="@drawable/single" />
 
-        <Button android:layout_width="270dp" android:layout_height="90dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_margin="25dp"
-                android:background="@drawable/random"/>
-    </LinearLayout>
-    <Button android:layout_width="64dp" android:layout_height="64dp" android:background="@drawable/option" android:layout_margin="24dp"
-            android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
-</RelativeLayout>
+            <Button android:layout_width="270dp" android:layout_height="90dp"
+                    android:id="@+id/random"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_margin="25dp"
+                    android:background="@drawable/random"/>
+        </LinearLayout>
+        <Button android:id="@+id/option" android:layout_width="64dp" android:layout_height="64dp" android:background="@drawable/option" android:layout_margin="24dp"
+                android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
+    </RelativeLayout>
+    <RelativeLayout android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent"
+                    android:id="@+id/optionlayout"
+                    android:layout_margin="80dp" android:background="@drawable/d">
+        <ImageView android:layout_width="150dp" android:layout_height="450dp" android:src="@drawable/madeby" android:layout_alignParentBottom="true" android:layout_alignParentRight="true"/>
+        <Button android:id="@+id/x" android:layout_width="48dp" android:layout_height="48dp"
+                android:layout_margin="10dp"
+                android:background="@drawable/esc"
+                android:layout_alignParentBottom="true" android:layout_alignParentLeft="true"/>
+    </RelativeLayout>
+</FrameLayout>
